Write command to mongos with invalid NS fails differently with mixed versions

XMLWordPrintableJSON

    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Filing as a bug since greg_10gen thinks this should be caught by mongos before forwarding command to shards.

      Collection name is "unsharded.errors.$foo". As the db name implies, this is to an unsharded DB.

      2.6 mongos with 2.6 shards:

      { "ok" : 0, "code" : 2, "errmsg" : "invalid collection name at shard0000" }
      

      2.6 mongos with 2.4 shards:

      {
              "ok" : 1,
              "n" : 0,
              "writeErrors" : [
                      {
                              "index" : 0,
                              "code" : 10093,
                              "errmsg" : "cannot insert into reserved $ collection"
                      }
              ]
      }
      

            Assignee:
            Siyuan Zhou
            Reporter:
            Mathias Stearn
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: