SERVER-12975 Write command to mongos checks invalid NS